--- a/examples/translations/package.json
+++ b/examples/translations/package.json
@@ -7,7 +7,13 @@
     "bobril": "^14.0.0",
     "bobril-g11n": "^4.4.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "*",
+    "eslint-config-bobril": "*",
+    "@typescript-eslint/parser": "*",
+    "@typescript-eslint/eslint-plugin": "*",
+    "typescript": "*"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
